2006-09-23  David Trowbridge <trowbrds@gmail.com>

	* plugins/perl/generate_header:
	  - Fix this to actually use the command-line arguments that it used
	    to take, so that builds work when builddir != srcdir.

2006-09-23  David Trowbridge <trowbrds@gmail.com>

	* plugins/python/python.c:
	A plugins/python/CVS:
	A plugins/python/CVS/Repository:
	A plugins/python/CVS/Root:
	A plugins/python/CVS/Entries:
	* plugins/perl/Xchat.pm:
	* plugins/perl/CVS/Entries:
	* src/common/dbus:
	* src/common/dbus/CVS/Entries:
	* src/common/plugin.c:
	* src/common/server.c:
	* src/common/xchat.c:
	* src/common/CVS/Entries:
	D src/common/CVS/Entries.Log:
	  - Sync to xchat cvs, add CVS directory for python plugin to ease
	    future syncs.

2006-09-22  Christian Persch  <chpe@cvs.gnome.org>

	* src/fe-gnome/xtext.c: (gtk_xtext_destroy), (gtk_xtext_unrealize),
	(gtk_xtext_realize), (gtk_xtext_leave_notify):
	* src/fe-gnome/xtext.h:
	  - Set I-beam cursor on the conversation view. Bug #356504.

2006-09-22  David Trowbridge  <trowbrds@gmail.com>

	* src/fe-gnome/userlist-gui.c: (get_user_tooltip):
	  - Fix a crash when using type-ahead search.  Bug #356091.

2006-09-20  Christian Persch  <chpe@cvs.gnome.org>

	* src/fe-gnome/xtext.c: (primary_clear_cb):
	  - Fix a crash when withdrawing the selection on unrealize. Bug
	  #355503.

Sun Sep 10 13:27:43 CEST 2006  Guillaume Desmottes <cass@skynet.be>

	* plugins/autoaway/gscreensaver.c:
	  - Use the new gnome-screensaver API. Bug #354306

2006-09-10  Christian Persch  <chpe@cvs.gnome.org>

	* data/irc-network-editor.glade:
	* data/preferences-dialog.glade:
	* data/setup-dialog.glade:
	* data/topic-change.glade:
	* data/xchat-gnome.glade:
	  - HIG fixes: use right capitalisation, and fix access keys. Bug
	    #354846.

Thu Sep  7 22:03:23 CEST 2006  Guillaume Desmottes <cass@skynet.be>

	* src/fe-gnome/marshallers.list:
	* src/fe-gnome/xtext.c:
	* src/fe-gnome/Makefile.am:
	* src/fe-gnome/xg-marshal.list: